Revert "new folders to bundle App, Navbar, Video, AboutUs files"

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
    
-    <link to="/" rel="stylesheet" href="../src/Images/logo.png">
+    <link to="/" rel="stylesheet" href="../src/images/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
